# mysql_connectionPool

./: CMakeLists.txt  README.md
include/: MysqlConnection.hpp  connectionPool.hpp  public.hpp  threadSafeQueue.hpp
mysqlConn/lib/: libmysqlcppconn.so.7
src/: MysqlConnection.cpp  cpool.conf
tests/: main.cpp
tests/src/: connectionPool.cpp  threadSafeQueue.cpp
